<resources>
    <string name="app_name">Drum</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_downloading">"Downloading files…"</string>
    <string name="main_bpm">BPM</string>
    <string name="track_empty">empty</string>
    <string name="mainmenu_button_new_track">Start a new project</string>
    <string name="mainmenu_button_load_track">Load a project</string>
    <string name="mainmenu_button_manage_kits">Manage sound kits</string>
    <string name="newproject_edit_project_name">Project name</string>
    <string name="soundkits_available_sounds">Sounds in this kit</string>
    <string name="soundkits_download_kits">Download selected kits</string>
    <string name="dialog_instruments_use_sound">Use selected sound</string>
    <string name="soundkits_available_kits">Available kits online</string>
    <string name="soundkits_downloaded_kits">Downloaded kits</string>
    <string name="soundkits_select_sound">Use selected sound</string>

    <string name="menu_add_track">Add track</string>
    <string name="menu_add_bar">Add bar</string>
    <string name="menu_loop">Loop</string>
    <string name="menu_save_track">Save project</string>

    <string name="dialog_song_save">Save project as..</string>
    <string name="dialog_song_save_submit">Save</string>
    <string name="toast_song_saved_ok">Project successfully saved</string>
    <string name="toast_song_saved_fail">Sorry, there was an error while saving the project..</string>
    <string name="toast_download_fail">Download failed. Check your internet connection and try again!</string>

    <string name="dialog_kit_delete">Delete kit</string>
    <string name="dialog_kit_delete_q">Delete soundkit?</string>
    <string name="dialog_kit_download">"Download kit"</string>
    <string name="dialog_kit_download_q">"Download soundkit?"</string>

    <string name="list_empty">No items yet</string>

    <string name="res_sound_name_template">%1$s.wav</string>
    <string name="res_sound_root_file_raw">https://github.com/pstadler1990/Drum/blob/master/kits/%1$s?raw=true</string>
    <string name="res_sound_kitlist">https://raw.githubusercontent.com/pstadler1990/Drum/master/kits/kitlist.json</string>

</resources>
