<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/menu_main_group_tracks">
        <item
            android:id="@+id/menu_main_add_track"
            android:icon="@drawable/ic_audiotrack_24dp"
            android:title="@string/menu_add_track"
            app:showAsAction="ifRoom|withText" />
        <item
            android:id="@+id/menu_main_add_page"
            android:icon="@drawable/ic_layers_24dp"
            android:title="@string/menu_add_bar"
            app:showAsAction="ifRoom|withText" />
    </group>

    <group android:id="@+id/menu_main_group_settings" android:checkableBehavior="single">
        <item
            android:id="@+id/menu_main_loop_enable"
            android:checkable="true"
            android:icon="@drawable/ic_loop_24dp"
            android:title="@string/menu_loop"
            app:showAsAction="ifRoom|withText" />
    </group>

    <group android:id="@+id/menu_main_group_save">
        <item android:id="@+id/menu_main_save_track" android:title="@string/menu_save_track" />
    </group>
</menu>