<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity"
    android:orientation="vertical"
    android:weightSum=".75">

    <Button
        android:id="@+id/button_new_track"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".15"
        android:layout_gravity="center"
        android:text="@string/mainmenu_button_new_track"
        android:textSize="@dimen/text_size_larger"
        android:backgroundTint="@color/colorAccentCTA"
        android:textColor="@color/colorWhite"/>

    <Button
        android:id="@+id/button_load_track"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".15"
        android:layout_gravity="center"
        android:text="@string/mainmenu_button_load_track"
        android:textSize="@dimen/text_size_larger"/>

    <Button
        android:id="@+id/button_manage_kits"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".15"
        android:layout_gravity="center"
        android:text="@string/mainmenu_button_manage_kits"
        android:textSize="@dimen/text_size_larger"/>

</LinearLayout>